@@ -1,3 +1,8 @@
+2004-11-14  Michael Koch  <konqueror@gmx.de>
+
+	* src/gnu/localegen/JavaGenerator.java:
+	Generate output file only if it will contain some locale data.
+
 2004-11-13  Michael Koch  <konqueror@gmx.de>
 
 	* src/gnu/localegen/JavaGenerator.java
